;;
;; Django Blog Lotus package
;;
[metadata]
name = django-blog-lotus
version = 0.9.2
description = A weblog application with Django.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = support@emencia.com
url = https://github.com/emencia/django-blog-lotus
project_urls =
    Source Code = https://github.com/emencia/django-blog-lotus
    Issue Tracker = https://github.com/emencia/django-blog-lotus/issues
    Changelog = https://django-blog-lotus.readthedocs.io/en/latest/history.html
    Documentation = https://django-blog-lotus.readthedocs.io/
license = MIT
keywords = Python Django Blog
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    django>=3.2,<5.2
    django-ckeditor>=6.0.0
    django-taggit>=5.0.0
    django-autocomplete-light>=3.9.7
    django-smart-media>=0.2.2
    django-treebeard>=4.3,!=4.5
packages = find:
zip_safe = True

[options.extras_require]
api =
    djangorestframework>=3.14.0
breadcrumbs =
    django-view-breadcrumbs>=2.2.4
dev =
    pillow>=8.0.0
    pytest>=7.0
    pytest-django>=4.5.2
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
    diskette>=0.3.6
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0
sandbox =
    drf-redesign>=0.4.0
    django-jazzmin>=2.6.2

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{39,311}-django{32,42,51}-{no_api,api}

[testenv]
deps =
    django32: Django>=3.2,<3.3
    django42: Django>=4.2,<5.0
    django51: Django>=5.1,<5.2
    api: djangorestframework>=3.14.0

commands =
    pip install -e .[breadcrumbs,dev]
    pytest -vv tests
