;;
;; Django Blog Lotus package
;;
[metadata]
name = django-blog-lotus
version = 0.9.0-pre.1
description = A weblog application with Django.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = support@emencia.com
url = https://github.com/emencia/django-blog-lotus
project_urls =
    Source Code = https://github.com/emencia/django-blog-lotus
    Issue Tracker = https://github.com/emencia/django-blog-lotus/issues
    Changelog = https://django-blog-lotus.readthedocs.io/en/latest/history.html
    Documentation = https://django-blog-lotus.readthedocs.io/
license = MIT
keywords = Python Django Blog
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2

[options]
python_requires = >=3.8
include_package_data = True
install_requires =
    Django>=3.2,<5.0
    django-ckeditor>=6.0.0
    django-taggit<5.0.0
    django-autocomplete-light>=3.9.7
    django-smart-media>=0.2.2
    django-treebeard>=4.3,!=4.5
packages = find:
zip_safe = True

[options.extras_require]
api =
    djangorestframework>=3.14.0
breadcrumbs =
    django-view-breadcrumbs>=2.2.4
dev =
    pillow>=8.0.0
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
    bigtree
quality =
    flake8
    twine
    tox
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload
sandbox =
    drf-redesign>=0.4.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38,310}-django{32,42}-{no_api,api}

[testenv]
deps =
    django32: Django>=3.2,<3.3
    django42: Django>=4.2,<5.0
    py38-django32: backports.zoneinfo
    api: djangorestframework>=3.14.0

commands =
    pip install -e .[breadcrumbs,dev]
    pytest -vv tests
